// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`budget summary component data row group renders 1`] = `
<Fragment>
  <DataRow
    category="combined"
    data={Object {}}
    entries={
      Array [
        10,
        20,
        30,
      ]
    }
    key="combined"
    title="Subtotal"
    year="1448"
  />
  <DataRow
    category="contractors"
    data={Object {}}
    entries={
      Array [
        10,
        20,
        30,
      ]
    }
    key="contractors"
    title="Contracted resources"
    year="1448"
  />
  <DataRow
    category="expenses"
    data={Object {}}
    entries={
      Array [
        10,
        20,
        30,
      ]
    }
    key="expenses"
    title="Non-personnel"
    year="1448"
  />
  <DataRow
    category="statePersonnel"
    data={Object {}}
    entries={
      Array [
        10,
        20,
        30,
      ]
    }
    key="statePersonnel"
    title="Project state staff"
    year="1448"
  />
</Fragment>
`;

exports[`budget summary component data row renders with data 1`] = `
<tr>
  <th
    headers="summary-budget-null1 summary-budget-null2"
  >
    title text
  </th>
  <td
    className="font-family--mono right-align"
    headers="summary-budget-fy-year summary-budget-fy-year-total"
  >
    <Dollars
      long={false}
    >
      1000
    </Dollars>
  </td>
  <td
    className="font-family--mono right-align"
    headers="summary-budget-fy-year summary-budget-fy-year-federal"
  >
    <Dollars
      long={false}
    >
      1
    </Dollars>
  </td>
  <td
    className="font-family--mono right-align"
    headers="summary-budget-fy-year summary-budget-fy-year-state"
  >
    <Dollars
      long={false}
    >
      2
    </Dollars>
  </td>
</tr>
`;

exports[`budget summary component data row renders with no data 1`] = `
<tr>
  <th
    headers="summary-budget-null1 summary-budget-null2"
  >
    title text
  </th>
  <td
    className="font-family--mono right-align"
    headers="summary-budget-fy-year summary-budget-fy-year-total"
  >
    <Dollars
      long={false}
    >
      0
    </Dollars>
  </td>
  <td
    className="font-family--mono right-align"
    headers="summary-budget-fy-year summary-budget-fy-year-federal"
  >
    <Dollars
      long={false}
    >
      0
    </Dollars>
  </td>
  <td
    className="font-family--mono right-align"
    headers="summary-budget-fy-year summary-budget-fy-year-state"
  >
    <Dollars
      long={false}
    >
      0
    </Dollars>
  </td>
</tr>
`;

exports[`budget summary component header row renders 1`] = `
<tr>
  <th
    className="ds-u-font-weight--bold"
    id="summary-budget-fy-1"
    key="1"
  >
    FFY 
    1
  </th>
  <th
    className="ds-u-text-align--center"
    id="summary-budget-fy-1-total"
  >
    Medicaid total
  </th>
  <th
    className="ds-u-text-align--center"
    id="summary-budget-fy-1-federal"
  >
    Federal total
  </th>
  <th
    className="ds-u-text-align--center"
    id="summary-budget-fy-1-state"
  >
    State total
  </th>
</tr>
`;

exports[`budget summary component renders correctly 1`] = `
<Fragment>
  <h3
    className="ds-h3"
  >
    HIT activities
  </h3>
  <table
    className="table-cms"
    key="1"
  >
    <thead>
      <HeaderRow
        yr="1"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "hit data",
          ]
        }
        year="1"
      />
    </tbody>
  </table>
  <table
    className="table-cms"
    key="2"
  >
    <thead>
      <HeaderRow
        yr="2"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "hit data",
          ]
        }
        year="2"
      />
    </tbody>
  </table>
  <table
    className="table-cms"
    key="total"
  >
    <thead>
      <HeaderRow
        yr="total"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "hit data",
          ]
        }
        year="total"
      />
    </tbody>
  </table>
  <h3
    className="ds-h3"
  >
    HIE activities
  </h3>
  <table
    className="table-cms"
    key="1"
  >
    <thead>
      <HeaderRow
        yr="1"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "hie data",
          ]
        }
        year="1"
      />
    </tbody>
  </table>
  <table
    className="table-cms"
    key="2"
  >
    <thead>
      <HeaderRow
        yr="2"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "hie data",
          ]
        }
        year="2"
      />
    </tbody>
  </table>
  <table
    className="table-cms"
    key="total"
  >
    <thead>
      <HeaderRow
        yr="total"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "hie data",
          ]
        }
        year="total"
      />
    </tbody>
  </table>
  <h3
    className="ds-h3"
  >
    MMIS activities
  </h3>
  <table
    className="table-cms"
    key="1"
  >
    <thead>
      <HeaderRow
        yr="1"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "mmis data",
          ]
        }
        year="1"
      />
    </tbody>
  </table>
  <table
    className="table-cms"
    key="2"
  >
    <thead>
      <HeaderRow
        yr="2"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "mmis data",
          ]
        }
        year="2"
      />
    </tbody>
  </table>
  <table
    className="table-cms"
    key="total"
  >
    <thead>
      <HeaderRow
        yr="total"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "mmis data",
          ]
        }
        year="total"
      />
    </tbody>
  </table>
  <h3
    className="ds-h3"
  >
    Project activities totals
  </h3>
  <table
    className="table-cms"
  >
    <thead>
      <tr>
        <th
          id="summary-budget-null1"
        />
        <th
          className="ds-u-text-align--center"
          id="summary-budget-total-medicaid"
        >
          Medicaid total
        </th>
        <th
          className="ds-u-text-align--center"
          id="summary-budget-total-federal"
        >
          Federal total
        </th>
        <th
          className="ds-u-text-align--center"
          id="summary-budget-total-state"
        >
          State total
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="1"
      >
        <th
          headers="summary-budget-null1"
        >
          FFY 
          1
        </th>
        <td
          className="font-family--mono right-align"
          headers="summary-budget-total-medicaid"
        >
          <Dollars
            long={false}
          >
            1000
          </Dollars>
        </td>
        <td
          className="font-family--mono right-align"
          headers="summary-budget-total-federal"
        >
          <Dollars
            long={false}
          >
            1
          </Dollars>
        </td>
        <td
          className="font-family--mono right-align"
          headers="summary-budget-total-state"
        >
          <Dollars
            long={false}
          >
            2
          </Dollars>
        </td>
      </tr>
      <tr
        key="2"
      >
        <th
          headers="summary-budget-null1"
        >
          FFY 
          2
        </th>
        <td
          className="font-family--mono right-align"
          headers="summary-budget-total-medicaid"
        >
          <Dollars
            long={false}
          >
            2000
          </Dollars>
        </td>
        <td
          className="font-family--mono right-align"
          headers="summary-budget-total-federal"
        >
          <Dollars
            long={false}
          >
            10
          </Dollars>
        </td>
        <td
          className="font-family--mono right-align"
          headers="summary-budget-total-state"
        >
          <Dollars
            long={false}
          >
            20
          </Dollars>
        </td>
      </tr>
    </tbody>
  </table>
</Fragment>
`;
